--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
 body {
-    background-color: #e0e0e0;
+    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: space-between;
 }
 
-#wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#left-container {
+    float: left;
+    width: 300px;
+    background-color: #507b9b; /* Light gray */
+    height: 100vh;
+    overflow: auto;
     padding: 20px;
 }
 
-#search-container {
-    width: 100%;
-    max-width: 400px;
+#right-container {
+    flex: 1;
+    background-color: #c7d33d;
+    display: grid; /* Changed property */
+    grid-template-rows: min-content auto; /* Added property */
+    padding: 20px;
+}
+
+
+#search-bar {
     margin-bottom: 20px;
 }
 
@@ -20,49 +31,56 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 20px;
 }
 
-#weather-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-
-#current-weather {
-    flex: 1 1 100%;
+#today-weather {
+    flex: 1;
     border: 1px solid #000;
     padding: 20px;
     box-sizing: border-box;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: #507b9b;
+    margin-bottom: 20px;
+}
+
+#forecast-container {
+    flex: 2;
+    overflow: auto;
 }
 
 #forecast {
     display: flex;
-    justify-content: space-between;
-}
-
-.forecast-day {
-    flex: 1;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 10px; /* Added property */
+  }
+  
+  .forecast-day {
+    flex: 0 0 calc(20% - 10px);
     border: 1px solid #000;
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     box-sizing: border-box;
     border-radius: 5px;
     text-align: center;
-}
+    background-color: #507b9b;
+    max-width: calc(20% - 10px);
+    box-sizing: border-box;
+  }
+  
+
+
+
 
 .forecast-day.clear {
-    background-color: #f7b32b;
+    background-color: #f7b32b; /* Orange for clear day */
 }
 
 .forecast-day.clouds {
-    background-color: #d9d9d9;
+    background-color: #d9d9d9; /* Gray for cloudy day */
 }
 
 .forecast-day.rain {
-    background-color: #187bcd;
+    background-color: #187bcd; /* Dark blue for rainy day */
 }
